# EtheralSystem

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API_ENDPOINTS.md  CLAUDE.md  Dockerfile  Dockerfile.manager  Dockerfile.ollama  Dockerfile.proxy  GEMINI.md  HISTORY.md  LLM_MCP.ipynb  LOG_README.md  METACLAW_ARCHITECTURE_ANALYSIS.md  README.md  deploy.sh  docker-compose.yaml  docker-compose.yml  entrypoint.sh  env_example.txt  history.md  langgraph.json  manage.sh  package-lock.json  package.json  playwright.config.ts  prompt_reddit.txt  pyproject.toml  research_metrics_logging_plan.md  tsconfig.json  turbo.json
.claude/: settings.local.json
apps/chatbot_mcp_client/: CLAUDE.md  Dockerfile.frontend  README.md  docker-compose.yml  entrypoint.sh  package.json
apps/langChain-application/: .env.example  Dockerfile.ollama  GEMINI.md  README.md  docker-compose.yaml  entrypoint.sh  history.md  manage.sh  package.json  pyproject.toml
apps/langChain-application/my_agent/agents/: graph.py  supervisor.py
apps/langChain-application/my_agent/agents/sub_agents/: examiner_agent.py  generator_agent.py
apps/langChain-application/my_agent/prompts/: examiner.txt  generator.txt
apps/langChain-application/my_agent/scripts/: check_chroma.py  check_deps.py  check_gemini_chroma.py  seed_research_rag.py
apps/langChain-application/my_agent/tools/examiner_tools/: mcp_config.json
apps/langChain-application/my_agent/tools/generator_tools/: __init__.py
apps/langChain-application/my_agent/utils/: llm_factory.py  mcp_client.py  openapi_parser.py  research_metrics.py  state.py  vector_db.py
apps/langChain-application/tests/: test_logic_regressions.py
apps/mcp-gen/: .gitignore  (+3 more)
backend/: main.py  mcp_server_filtering.py  metaclaw_client.py  shared.py
docker/: chatbot-frontend.Dockerfile  mcp-gen.Dockerfile
docs/: API_CONTRACT.md  ARTIFACT_LIFECYCLE.md  CONTEXT_SIZE_ANALYSIS.md  GRAPH_ARCHITECTURE.md  LLM_RETRY_MECHANISM.md  METACLAW_ARCHITECTURE_ANALYSIS.md  Plan.docx  SERVICE_CONTRACT.md  SKILL_SELECTION_OPTIMIZATION_ROADMAP.md  TOKEN_MANAGEMENT.md  TOKEN_MANAGEMENT_IMPLEMENTATION.md  backend-toolcall-matrix-benchmark.md  dashboard-run-controls-validation.md  headless-mcp-tool-validation.md  jsonplaceholder-ui-metrics-e2e.md  research-matrix-runner.md
input/: dummyjson.txt  jsonplaceholder.txt  pokeapi.txt  reddit.txt  reddit_auth_information.txt  thedogapi.txt  thedogapi_auth_information.txt
my-agent/: README.md  deepAgent.py  main.py  mcp_agent.py  mcp_tools.py  test.py  test_chat_template.py  test_llm_connection.py  test_with_examiner.py
plans/: langChain-application-change-plan.md  mcp-gen-change-plan.md
src/: dynamic-proxy.ts  launcher.ts  mcp-server-manager.ts
test/: reddit-server-fixed.ts  test-generation.ts
tests/: test_logic_regressions.py
(+341 files in other folders)
