[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-application"
version = "0.1.0"
description = "LangGraph application"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "tung" }]
dependencies = [
    "langgraph",
    "langchain",
    "langchain-openai",
    "ipython",
    "langchain-google-genai",
    "deepagents",
    "python-dotenv",
    "requests",
    "httpx",
    "tavily-python",
]

[tool.setuptools.packages.find]
where = ["my-agent"]
